@@ -2,6 +2,7 @@
 -bugfix: gracefully handle incorrectly encoded query strings with unencoded '=' not following a key
 -bugfix: param and query incorrectly unset single parameters when passed a falsey value (credit: vroom)
 -documentation: clarify handling of '+' in decode
+-new method: clone() as an alias for uri() (credit: merlyn)
 
 0.39 2018-07-22
 -behavior: no size limit on member string sizes
